# datafusion-fiddle

./: Cargo.toml  package.json  pnpm-lock.yaml  vercel.json  vite.config.js
api/: main.rs
api/parquet/weather/: part-0.parquet  part-1.parquet  part-2.parquet  part-3.parquet
src/: SqlEditor.tsx
